--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ nav .navbar .menu{
 }
 nav .navbar .menu li{
   list-style: none;
-  margin: 0 8px;
+  margin: 0 30px;
 }
 .navbar .menu a{
   font-size: 18px;
@@ -114,7 +114,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("background.png") no-repeat;
+  background: url("images/background.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -252,6 +252,8 @@ section .button button:hover{
   background-color: #fff;
   color: #00ADB5;
 }
+/* My btn */
+
 
  /* My Skills CSS */
  .skills{
@@ -307,7 +309,21 @@ section .button button:hover{
   color: #00ADB5;
 }
 
+/* Portfolio CSS */
+.portfolio .content{
+  margin: 0 auto;
+  padding: 30px 0;
+}
+.portfolio .text{
+  width: 80%;
+  text-align: center;
+  margin: auto;
+}
+   
 /* My Services CSS */
+.services{
+  background: #F0F8FF;
+}
 .services .boxes{
   display: flex;
   flex-wrap: wrap;
@@ -353,9 +369,6 @@ section .button button:hover{
   color: #fff;
 }
 /* Contact Me CSS */
-.contact{
-  background: #F0F8FF;
-}
 .contact .content{
   margin: 0 auto;
   padding: 30px 0;
